[package]
name = "cc-search"
version = "0.1.0"
edition = "2021"
description = "Global fzf-driven search across all Claude Code sessions"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
shlex = "1"
nu-ansi-term = "0.50"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
